sumo/tests/netgen/errors/no_output/options.netgen
--grid-net --grid-number=10 --grid-length=400 
